// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load Files Should convert complex sql account-levelisations.query.sql: account-levelisations.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "q",
      "type": "string",
    },
    Object {
      "name": "levelisationId",
      "type": "number",
    },
    Object {
      "name": "ids",
      "type": Object {
        "items": "number",
        "type": "array",
      },
    },
    Object {
      "name": "limit",
      "type": "number",
    },
    Object {
      "name": "offset",
      "type": "number",
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": "number",
    },
    Object {
      "name": "levelisationId",
      "type": "number",
    },
    Object {
      "name": "accountId",
      "type": "number",
    },
    Object {
      "name": "installationId",
      "type": "number",
    },
    Object {
      "name": "state",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Pending",
          },
          Object {
            "type": "literal",
            "value": "Done",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "isAccepted",
      "type": "boolean",
    },
    Object {
      "name": "generationStartReadOn",
      "type": "Date",
    },
    Object {
      "name": "generationStartReadValue",
      "type": "string",
    },
    Object {
      "name": "generationEndReadOn",
      "type": "Date",
    },
    Object {
      "name": "generationEndReadValue",
      "type": "string",
    },
    Object {
      "name": "generationPercentageSplit",
      "type": "number",
    },
    Object {
      "name": "generationPayment",
      "type": "string",
    },
    Object {
      "name": "generationEnergy",
      "type": "string",
    },
    Object {
      "name": "exportStartReadOn",
      "type": "Date",
    },
    Object {
      "name": "exportStartReadValue",
      "type": "string",
    },
    Object {
      "name": "exportEndReadOn",
      "type": "Date",
    },
    Object {
      "name": "exportEndReadValue",
      "type": "string",
    },
    Object {
      "name": "exportPercentageSplit",
      "type": "number",
    },
    Object {
      "name": "exportPayment",
      "type": "string",
    },
    Object {
      "name": "exportEnergy",
      "type": "string",
    },
    Object {
      "name": "totalPayment",
      "type": "string",
    },
    Object {
      "name": "vatPayment",
      "type": "string",
    },
    Object {
      "name": "cfrFitId",
      "type": "string",
    },
  ],
}
`;

exports[`Load Files Should convert complex sql accounts.query.sql: accounts.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "q",
      "type": "string",
    },
    Object {
      "name": "ids",
      "type": Object {
        "items": "number",
        "type": "array",
      },
    },
    Object {
      "name": "limit",
      "type": "number",
    },
    Object {
      "name": "offset",
      "type": "number",
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": "number",
    },
    Object {
      "name": "state",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Active",
          },
          Object {
            "type": "literal",
            "value": "Pending",
          },
          Object {
            "type": "literal",
            "value": "Dispute",
          },
          Object {
            "type": "literal",
            "value": "Closed",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "startOn",
      "type": "Date",
    },
    Object {
      "name": "firstName",
      "type": "string",
    },
    Object {
      "name": "lastName",
      "type": "string",
    },
    Object {
      "name": "email",
      "type": "string",
    },
    Object {
      "name": "address",
      "type": "string",
    },
    Object {
      "name": "fitIds",
      "type": Object {
        "items": "string",
        "type": "array",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql accounts.sql: accounts.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql bacs.query.sql: bacs.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "quarter",
      "type": "string",
    },
    Object {
      "name": "perPage",
      "type": "string",
    },
    Object {
      "name": "offset",
      "type": "string",
    },
  ],
  "result": Array [
    Object {
      "name": "fitId",
      "type": "string",
    },
    Object {
      "name": "name",
      "type": "string",
    },
    Object {
      "name": "amount",
      "type": "string",
    },
    Object {
      "name": "quarter",
      "type": "string",
    },
    Object {
      "name": "bankDetails",
      "type": "string",
    },
    Object {
      "name": "addressLine1",
      "type": "string",
    },
    Object {
      "name": "addressLine2",
      "type": "string",
    },
    Object {
      "name": "addressLine3",
      "type": "string",
    },
    Object {
      "name": "postcode",
      "type": "string",
    },
  ],
}
`;

exports[`Load Files Should convert complex sql contracts.sql: contracts.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql generation-read-data.query.sql: generation-read-data.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "installationId",
      "type": "number",
    },
    Object {
      "name": "exportDateOn",
      "type": "Date",
    },
  ],
  "result": Array [
    Object {
      "name": "dateOn",
      "type": "Date",
    },
    Object {
      "name": "value",
      "type": "number",
    },
  ],
}
`;

exports[`Load Files Should convert complex sql installations.sql: installations.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql meter-reads.sql: meter-reads.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql rates-by-tarrif-ids.query.sql: rates-by-tarrif-ids.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "ids",
      "type": "number",
    },
  ],
  "result": Array [
    Object {
      "name": "tariffId",
      "type": "number",
    },
    Object {
      "name": "rate",
      "type": "string",
    },
    Object {
      "name": "startOn",
      "type": "Date",
    },
    Object {
      "name": "tariffCode",
      "type": "string",
    },
    Object {
      "name": "tariffType",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Export",
          },
          Object {
            "type": "literal",
            "value": "Generation",
          },
          Object {
            "type": "literal",
            "value": "SEG",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "endOn",
      "type": "Date",
    },
  ],
}
`;

exports[`Load Files Should convert complex sql reads-by-account-id.query.sql: reads-by-account-id.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": "number",
    },
    Object {
      "name": "offset",
      "type": "string",
    },
    Object {
      "name": "perPage",
      "type": "string",
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": "number",
    },
    Object {
      "name": "msn",
      "type": "string",
    },
    Object {
      "name": "meterId",
      "type": "number",
    },
    Object {
      "name": "dateOn",
      "type": "Date",
    },
    Object {
      "name": "value",
      "type": "number",
    },
    Object {
      "name": "type",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Opening",
          },
          Object {
            "type": "literal",
            "value": "Closing",
          },
          Object {
            "type": "literal",
            "value": "Quarterly",
          },
          Object {
            "type": "literal",
            "value": "Meter Verification",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "reason",
      "type": "string",
    },
    Object {
      "name": "createdAt",
      "type": "string",
    },
    Object {
      "name": "updatedAt",
      "type": "string",
    },
    Object {
      "name": "sourceSystemId",
      "type": "number",
    },
    Object {
      "name": "mpan",
      "type": "string",
    },
  ],
}
`;

exports[`Load Files Should convert complex sql tariff-rates.sql: tariff-rates.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;
